--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "node-telegram-bot-api": "^0.57.0",
     "nodemon": "^2.0.16"
   }
